fix(VDialog): remove applied v-toolbar padding for scrollbar offset

--- a/packages/vuetify/src/components/VDialog/VDialog.sass
+++ b/packages/vuetify/src/components/VDialog/VDialog.sass
@@ -15,6 +15,7 @@
 
     > .v-card,
     > .v-sheet
+      --v-scrollbar-offset: 0px
       border-radius: $dialog-border-radius
       overflow-y: auto
 
